force-app/main/default/objects/HDT_StatoMotoreVas__mdt/HDT_StatoMotoreVas__mdt.object-meta.xml
<CustomObject>
    <label>Stato Motore Vas</label>
    <pluralLabel>Stati Motore Vas</pluralLabel>
</CustomObject>