force-app/main/default/objects/HDT_StatoMotoreVas__mdt/fields/AssetStatus__c.field-meta.xml
<CustomField>
    <fullName>AssetStatus__c</fullName>
    <label>Stato Asset</label>
    <length>255</length>
    <type>Text</type>
</CustomField>