force-app/main/default/objects/HDT_StatoMotoreVas__mdt/fields/CasePhase__c.field-meta.xml
<CustomField>
    <fullName>CasePhase__c</fullName>
    <label>Fase Caso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>