force-app/main/default/objects/HDT_StatoMotoreVas__mdt/fields/CaseStatus__c.field-meta.xml
<CustomField>
    <fullName>CaseStatus__c</fullName>
    <label>Stato Caso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>