force-app/main/default/objects/HDT_StatoMotoreVas__mdt/fields/OrderPhase__c.field-meta.xml
<CustomField>
    <fullName>OrderPhase__c</fullName>
    <label>Fase Ordine</label>
    <length>255</length>
    <type>Text</type>
</CustomField>