force-app/main/default/objects/HDT_StatoMotoreVas__mdt/fields/OrderStatus__c.field-meta.xml
<CustomField>
    <fullName>OrderStatus__c</fullName>
    <label>Stato Ordine</label>
    <length>255</length>
    <type>Text</type>
</CustomField>