force-app/main/default/objects/HDT_StatoMotoreVas__mdt/fields/VasStatus__c.field-meta.xml
<CustomField>
    <fullName>VasStatus__c</fullName>
    <label>Stato Motore Vas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>